--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Hoàng Trần Đức Phát</title>
+  <title>Firework</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <meta name="moblie-web-app-capable" content="yes">
   <meta name="apple-moblie-web-app-capable" content="yes">
